diesel_compile_tests/tests/fail/insert_requires_value_of_same_type_as_column.stderr
error[E0277]: the trait bound `{integer}: diesel::Expression` is not satisfied
  --> $DIR/insert_requires_value_of_same_type_as_column.rs:19:26
   |
19 |         .values(&name.eq(1));
   |                          ^ the trait `diesel::Expression` is not implemented for `{integer}`
   |
   = help: the following implementations were found:
             <&'a T as diesel::Expression>
             <(A, B) as diesel::Expression>
             <(A, B, C) as diesel::Expression>
             <(A, B, C, D) as diesel::Expression>
           and 109 others
   = note: required because of the requirements on the impl of `AsExpression<diesel::sql_types::Text>` for `{integer}`
